# basecamp-sdk-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
openspec/changes/archive/2026-03-26-initial-implementation/: design.md  proposal.md  specs.md  tasks.md
openspec/changes/initial-implementation/: specs.md  tasks.md
specs/: CONFORMANCE.md  SPEC.md  TESTING.md
specs/core/: auth.md  client.md  config.md  error.md  hooks.md  http.md  pagination.md  security.md
specs/modules/: download.md  oauth.md  webhooks.md
src/: client.rs  config.rs  error.rs  hooks.rs  lib.rs  pagination.rs  security.rs
src/auth/: bearer.rs  mod.rs  oauth.rs  strategy.rs  token.rs
src/http/: client.rs  mod.rs  retry.rs
src/services/: authorization.rs  mod.rs
tests/: conformance_test.rs
tests/conformance/: assertions.rs  mod.rs  operations.rs  runner.rs  types.rs
