[package]
name = "basecamp-sdk-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/oonid/basecamp-sdk-rs"
description = "Official Rust SDK for the Basecamp API"
keywords = ["basecamp", "api", "sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "form", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "sync", "time"] }
thiserror = "2.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
once_cell = "1.21"
httpdate = "1.0"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
serial_test = "3.0"
