[package]
name = "basecamp-sdk-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/oonid/basecamp-sdk-rs"
description = "Official Rust SDK for the Basecamp API"
keywords = ["basecamp", "api", "sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "form", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "sync", "time"] }
thiserror = "2.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
once_cell = "1.21"
httpdate = "1.0"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
serial_test = "3.0"

# Forced dependency versions for Rust 1.75 compatibility
# After adding these, run: rm Cargo.lock && cargo generate-lockfile && cargo update -p idna_adapter --precise 1.2.0
# Verify with: cargo tree -p idna_adapter
idna_adapter = "=1.2.0"  # refer https://crates.io/crates/idna_adapter/versions for v1.67.0
# Additional pinned versions to prevent newer incompatible versions
litemap = "=0.7.4"                      # refer https://crates.io/crates/litemap/versions for v1.71.1
zerofrom = "=0.1.5"                     # refer https://crates.io/crates/zerofrom/versions for v1.71.1
indexmap = "=2.11.4"                    # refer https://crates.io/crates/indexmap/versions for v1.63.0